--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
                     </div>
                     <button class="complete-order-btn" id="complete-order-btn">Complete order</button>
                 </div>
-                <div class="order-confirmation-msg" id="order-confirmation-msg">
-                </div>
+                <div class="order-confirmation-msg" id="order-confirmation-msg"></div>
             </section>
         </main>
         <div class="modal" id="modal">
